Changed the log in button size. Added a media query to the teams section. Working on fixing overlapping issues when page size decreases.

--- a/prospera/src/Components/AboutPage/AboutPage.css
+++ b/prospera/src/Components/AboutPage/AboutPage.css
@@ -2,9 +2,12 @@
     font-size: 1.5rem;
     margin-bottom: 1rem;
     /* margin-top: 15rem; */
+    margin-left: 100px;
+    margin-right: 100px;
 
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 2rem;
     color: #fff;
 }
@@ -40,25 +43,25 @@
 .rightAboutBody p {
     font-weight: normal;
     line-height: 1.6;
+    text-align: justify;
 }
 
 /* Log In Button */
 .aboutLogInButton {
-    padding: 15px 30px;
+    padding: 10px;
     background-color: #000;
     color: #ffffff;
 
-    font-size: 1.2rem;
     cursor: pointer;
     border-radius: 10px;
-    padding: 1rem;
     transition: all 0.4s ease;
 
     outline: none;
     position: relative;
     overflow: hidden;
     
-    width: 150px;
+    width: 120%;
+    margin: 0 10px;
 }
 
 .aboutLogInButton::after {
@@ -91,6 +94,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
     margin-top: 2rem;
     margin-bottom: 19rem;
 
@@ -108,8 +112,8 @@
     justify-content: center;
     align-items: center;
 
-    margin-top: 2rem;
-    height: 50vh;
+    /* margin-top: 2rem; */
+    padding: 20px;
     border-radius: 7px;
 
     background-color: rgba(255, 255, 255, 0.3);
@@ -120,6 +124,12 @@
     justify-content: space-evenly;
     align-items: center;
     margin-top: 1rem;
+}
+
+@media (max-width: 950px) {
+    .teamIcons {
+        flex-direction: column;
+    }
 }
 
 .teamMember {
