--- a/prospera/src/Components/Header/Header.css
+++ b/prospera/src/Components/Header/Header.css
@@ -33,16 +33,14 @@ header {
 header a {
     margin: 0 10px;
     color: #000;
-    font-size: 1rem;
     text-decoration: none;
     transition: all 0.4s ease;
 }
 
 /* Buttons */
 .auth-buttons button{
-    padding: 15px 30px;
+    padding: 10px;
 
-    font-size: 1rem;
     cursor: pointer;
     border-radius: 10px;
     transition: all 0.4s ease;
@@ -51,7 +49,7 @@ header a {
     position: relative;
     overflow:hidden ;
     
-    width: 150px;
+    width: 120%;
     margin: 0 10px;
 }
 
@@ -59,7 +57,7 @@ header a {
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    padding-right: 33px;
+    margin-right: 50px;
 }
 
 .login {
